@startuml US12-CD
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class SubmitComplaintUI {
}

class SubmitComplaintController {
    + SubmitComplaintController()
    + getPoliticalAgents() : List<PoliticalAgentDTO>
    + getPoliticalFunctions() : List<PoliticalFunction>
    + startComplaint(agentDto : PoliticalAgentDTO) : boolean
    + addGrievance(description : String, date : Date,\n  function : PoliticalFunction) : void
    + getCurrentGrievances() : List<ComplaintItemDTO>
    + getCurrentGrievanceCount() : int
    + submitComplaint() : boolean
    + cancelComplaint() : void
}

class PoliticalAgentDTO <<DTO>> {
    - name : String
    - email : String
    + getName() : String
    + getEmail() : String
}

class ComplaintItemDTO <<DTO>> {
    - description : String
    - complaintDate : Date
    - politicalFunction : PoliticalFunction
    + getDescription() : String
    + getComplaintDate() : Date
    + getPoliticalFunction() : PoliticalFunction
}

class PoliticalAgentMapper {
    + toDTO(agent : PoliticalAgent) : PoliticalAgentDTO
    + toDTO(agents : List<PoliticalAgent>) : List<PoliticalAgentDTO>
}

class ComplaintItemMapper {
    + toDTO(item : ComplaintItem) : ComplaintItemDTO
    + toDTO(items : List<ComplaintItem>) : List<ComplaintItemDTO>
}

class Repositories <<Singleton>> {
    - {static} instance : Repositories
    - Repositories()
    + {static} getInstance() : Repositories
    + getPoliticalAgentRepository() : PoliticalAgentRepository
    + getCitizenRepository() : CitizenRepository
    + getComplaintRepository() : ComplaintRepository
    + getAuthenticationRepository() : AuthenticationRepository
}

class AuthenticationRepository {
    + getCurrentUserSession() : UserSession
}

class UserSession {
    + getUserId() : Email
}

class Email {
    + getEmail() : String
}

class PoliticalAgentRepository {
    + getAll() : List<PoliticalAgent>
    + getByEmail(email : String) : PoliticalAgent
    + save(agent : PoliticalAgent) : boolean
}

class CitizenRepository {
    + getCitizenByEmail(email : String) : Citizen
    + save(citizen : Citizen) : boolean
}

class ComplaintRepository {
    + createComplaint(citizen : Citizen, agent : PoliticalAgent) : Complaint
    + save(complaint : Complaint) : boolean
    + getComplaints() : List<Complaint>
}

class Complaint {
    - submissionDate : Date
    + Complaint(citizen, agent)
    + Complaint(description, date, citizen, agent, function)
    + addItem(description, date, function)
    + getItems() : List<ComplaintItem>
    + getItemCount() : int
    + getCitizen() : Citizen
    + getPoliticalAgent() : PoliticalAgent
    + getSubmissionDate() : Date
    + getDescription() : String
    + getComplaintDate() : Date
    + getPoliticalFunction() : PoliticalFunction
}

class ComplaintItem {
    - description : String
    - complaintDate : Date
    + ComplaintItem(description, date, function)
    + getDescription() : String
    + getComplaintDate() : Date
    + getPoliticalFunction() : PoliticalFunction
}

abstract class User {
    - name : String
    - email : String
    + getName() : String
    + getEmail() : String
    + hasEmail(email : String) : boolean
}

class PoliticalAgent {
    - nationalIdentityCard : String
    - taxIdentificationNumber : String
    - mandateStart : Date
    - mandateEnd : Date
}

class Citizen {
    - nationalIdCardNumber : String
    + getNationalIdCardNumber() : String
}

User <|-- PoliticalAgent
User <|-- Citizen

enum PoliticalFunction {
    MINISTER
    DEPUTY
    COUNCILLOR
    PARISH_COUNCIL_PRESIDENT
    MAYOR
}

SubmitComplaintUI .> SubmitComplaintController
SubmitComplaintUI ..> PoliticalAgentDTO
SubmitComplaintUI ..> ComplaintItemDTO

SubmitComplaintController ..> Repositories
SubmitComplaintController ..> PoliticalAgentRepository
SubmitComplaintController ..> CitizenRepository
SubmitComplaintController ..> ComplaintRepository
SubmitComplaintController ..> AuthenticationRepository
SubmitComplaintController ..> UserSession
SubmitComplaintController ..> Email
SubmitComplaintController ..> Complaint
SubmitComplaintController ..> PoliticalAgentMapper
SubmitComplaintController ..> ComplaintItemMapper

PoliticalAgentMapper ..> PoliticalAgent
PoliticalAgentMapper ..> PoliticalAgentDTO
ComplaintItemMapper ..> ComplaintItem
ComplaintItemMapper ..> ComplaintItemDTO
ComplaintItemDTO ..> PoliticalFunction

Repositories -> "1" Repositories : instance
Repositories --> "1" PoliticalAgentRepository : politicalAgentRepository
Repositories --> "1" CitizenRepository : citizenRepository
Repositories --> "1" ComplaintRepository : complaintRepository
Repositories --> "1" AuthenticationRepository : authenticationRepository

AuthenticationRepository --> "0..1" UserSession : current >
UserSession ..> Email

ComplaintRepository ..> Complaint : «create»
ComplaintRepository "1" --> "*" Complaint : complaints

Complaint "1" *--> "1..*" ComplaintItem : items
Complaint "*" --> "1" Citizen : citizen
Complaint "*" --> "1" PoliticalAgent : politicalAgent
ComplaintItem ..> PoliticalFunction

@enduml
